# SS14.Notebook

./: LICENCE  index.html  package.json
.github/workflows/: pre-release.yml  release.yml
public/: rick.html
src/: App.tsx  index.tsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: quotes.toml  recipes.json
src-tauri/data/databases/: quick_sentences.db
src-tauri/data/databases/sql/: quick_sentences_init.sql
src-tauri/src/: commands.rs  main.rs
src/components/: AboutProgram.module.scss  AboutProgram.tsx  CopyButton.tsx  Counter.module.scss  Counter.tsx  Marquee.module.scss  Marquee.tsx  QuickSentences.module.scss  QuickSentences.tsx  Quotes.tsx  Recipes.module.scss  Recipes.tsx  Snowflakes.module.scss  Snowflakes.tsx
src/repositories/: IRepository.ts  QuickSentenceRepository.ts  SQL.ts
